agregada profile update
